--- a/SDGC/src/interfazDeUsuario/VentanaConsultaDocentes.fxml
+++ b/SDGC/src/interfazDeUsuario/VentanaConsultaDocentes.fxml
@@ -11,7 +11,7 @@
 <?import javafx.scene.layout.Pane?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane id="AnchorPane" prefHeight="450.0" prefWidth="700.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="interfazDeUsuario.Controladores.VentanaConsultaDocentesControlador">
+<AnchorPane id="AnchorPane" fx:id="ventanaConsultaDocentes" prefHeight="450.0" prefWidth="700.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="interfazDeUsuario.Controladores.VentanaConsultaDocentesControlador">
    <children>
       <Pane prefHeight="90.0" prefWidth="700.0" style="-fx-background-color: #0085FC;">
          <children>
@@ -43,7 +43,7 @@
             <Image url="@Imagenes/lupaIcono.png" />
          </image>
       </ImageView>
-      <Button fx:id="btn_regresar" layoutX="574.0" layoutY="384.0" mnemonicParsing="false" style="-fx-background-color: #DB2843;" text="Regresar" textFill="WHITE">
+      <Button fx:id="btn_regresar" layoutX="574.0" layoutY="384.0" mnemonicParsing="false" onAction="#salirAlMenuPrincipal" style="-fx-background-color: #DB2843;" text="Regresar" textFill="WHITE">
          <font>
             <Font size="15.0" />
          </font>
