--- a/SDGC/src/interfazDeUsuario/VentanaInicioSesion.fxml
+++ b/SDGC/src/interfazDeUsuario/VentanaInicioSesion.fxml
@@ -11,7 +11,7 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane id="AnchorPane" prefHeight="450.0" prefWidth="700.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="interfazDeUsuario.Controladores.VentanaInicioSesionControlador">
+<AnchorPane id="AnchorPane" fx:id="ventanaInicioSesion" prefHeight="450.0" prefWidth="700.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="interfazDeUsuario.Controladores.VentanaInicioSesionControlador">
    <children>
       <VBox layoutX="328.0" layoutY="53.0" prefHeight="80.0" prefWidth="330.0" style="-fx-border-color: #168394;">
          <children>
@@ -38,7 +38,7 @@
             <Font size="20.0" />
          </font>
       </Label>
-      <Button fx:id="btn_ingresar" layoutX="404.0" layoutY="324.0" mnemonicParsing="false" prefHeight="30.0" prefWidth="176.0" style="-fx-background-color: #33A64C;" text="Ingresar" textFill="WHITE">
+      <Button fx:id="btn_ingresar" layoutX="404.0" layoutY="324.0" mnemonicParsing="false" onAction="#ingresar" prefHeight="30.0" prefWidth="176.0" style="-fx-background-color: #33A64C;" text="Ingresar" textFill="WHITE">
          <font>
             <Font name="System Bold" size="12.0" />
          </font>
