--- a/SDGC/src/interfazDeUsuario/VentanaMenuPersonalAdministrativo.fxml
+++ b/SDGC/src/interfazDeUsuario/VentanaMenuPersonalAdministrativo.fxml
@@ -9,7 +9,7 @@
 <?import javafx.scene.layout.Pane?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane id="AnchorPane" prefHeight="450.0" prefWidth="700.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="interfazDeUsuario.Controladores.VentanaMenuPersonalAdministrativoControlador">
+<AnchorPane id="AnchorPane" fx:id="ventanaMenuPersonalAdministrativo" prefHeight="450.0" prefWidth="700.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="interfazDeUsuario.Controladores.VentanaMenuPersonalAdministrativoControlador">
    <children>
       <Pane prefHeight="90.0" prefWidth="700.0" style="-fx-background-color: #0085FC;">
          <children>
