--- a/SDGC/src/interfazDeUsuario/VentanaRegistroDocente.fxml
+++ b/SDGC/src/interfazDeUsuario/VentanaRegistroDocente.fxml
@@ -10,7 +10,7 @@
 <?import javafx.scene.layout.Pane?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane id="AnchorPane" prefHeight="450.0" prefWidth="700.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="interfazDeUsuario.Controladores.VentanaRegistroDocenteControlador">
+<AnchorPane id="AnchorPane" fx:id="ventanaRegistroDocente" prefHeight="450.0" prefWidth="700.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="interfazDeUsuario.Controladores.VentanaRegistroDocenteControlador">
    <children>
       <Pane layoutY="-7.0" prefHeight="90.0" prefWidth="882.0" style="-fx-background-color: #0085FC;">
          <children>
@@ -51,8 +51,8 @@
             <Font name="System Bold" size="20.0" />
          </font>
       </Label>
-      <ComboBox fx:id="cmb_tipoContratacion" layoutX="73.0" layoutY="297.0" prefHeight="25.0" prefWidth="170.0" promptText="Tipo de contratación" />
-      <ComboBox fx:id="cmb_categoriaContratacion" layoutX="301.0" layoutY="297.0" prefHeight="25.0" prefWidth="191.0" promptText="Categoría de contratación" />
+      <ComboBox fx:id="cmb_tipoContratacion" layoutX="73.0" layoutY="297.0" prefHeight="38.0" prefWidth="346.0" promptText="Tipo de contratación" stylesheets="@ComboBoxEstilo.css" />
+      <ComboBox fx:id="cmb_categoriaContratacion" layoutX="445.0" layoutY="297.0" prefHeight="38.0" prefWidth="366.0" promptText="Categoría de contratación" stylesheets="@ComboBoxEstilo.css" />
       <TextField fx:id="txf_nombre" layoutX="190.0" layoutY="111.0" prefHeight="32.0" prefWidth="619.0">
          <font>
             <Font size="15.0" />
@@ -78,14 +78,14 @@
             <Font size="15.0" />
          </font>
       </TextField>
-      <Button fx:id="btn_guardar" layoutX="301.0" layoutY="359.0" mnemonicParsing="false" onAction="#verificarCampos" prefHeight="40.0" prefWidth="135.0" style="-fx-background-color: #33A64C;" text="Guardar" textFill="WHITE">
+      <Button fx:id="btn_guardar" layoutX="301.0" layoutY="359.0" mnemonicParsing="false" onAction="#registrarDocente" prefHeight="40.0" prefWidth="135.0" style="-fx-background-color: #33A64C;" text="Guardar" textFill="WHITE">
          <font>
-            <Font size="15.0" />
+            <Font name="System Bold" size="15.0" />
          </font>
       </Button>
-      <Button fx:id="btn_cancelar" layoutX="492.0" layoutY="359.0" mnemonicParsing="false" prefHeight="40.0" prefWidth="135.0" style="-fx-background-color: #DB2843;" text="Cancelar" textFill="WHITE">
+      <Button fx:id="btn_cancelar" layoutX="492.0" layoutY="359.0" mnemonicParsing="false" onAction="#salirAlMenuPrincipal" prefHeight="40.0" prefWidth="135.0" style="-fx-background-color: #DB2843;" text="Cancelar" textFill="WHITE">
          <font>
-            <Font size="15.0" />
+            <Font name="System Bold" size="15.0" />
          </font>
       </Button>
    </children>
